中間環境変数で文字化け対策試みる

--- a/.github/workflows/Windows-Build.yml
+++ b/.github/workflows/Windows-Build.yml
@@ -44,8 +44,7 @@ jobs:
           targetPlatform: ${{ matrix.targetPlatform }}
           projectPath:    ${{ matrix.root-project-path }}
           unityVersion:   ${{ matrix.unity-editor-version }}
-          allowDirtyBuild: true
-          
+          allowDirtyBuild: true          
           
       # Output
       - name: Output Build Artifact
@@ -54,15 +53,12 @@ jobs:
           name:       ${{ matrix.buildName }}
           path: build/${{ matrix.targetPlatform }}
       
-      
-      # credentialsファイルの復元
-      - name: Write GDrive Credentials File
-        run: echo "${{ secrets.GDRIVE_CREDENTIALS }}" | base64 -d > credentials.json
-      
       # Google Driveへアップロード
       - name: Upload to Google Drive
         uses: Jumbo810/Upload_Github_Artifacts_TO_GDrive@v2.3.1
+        env:
+          CREDENTIALS: ${{ secrets.GDRIVE_CREDENTIALS }}
         with:
           target: build/${{ matrix.targetPlatform }}
-          credentials: credentials.json
+          credentials: "${CREDENTIALS}"                     # 文字化け対策で中間環境変数用いてみる
           parent_folder_id: ${{ secrets.GDRIVE_FOLDER_ID }}
