--- a/.github/workflows/Windows-Build.yml
+++ b/.github/workflows/Windows-Build.yml
@@ -57,6 +57,6 @@ jobs:
       - name: Upload to Google Drive
         uses: Jumbo810/Upload_Github_Artifacts_TO_GDrive@v2.3.1
         with:
-          target: build/${{ matrix.targetPlatform }}
+          target: build/${{ matrix.buildName }}.zip
           credentials: ${{ secrets.GDRIVE_CREDENTIALS }}
           parent_folder_id: ${{ secrets.GDRIVE_FOLDER_ID }}
