--- a/.github/workflows/Windows-Build.yml
+++ b/.github/workflows/Windows-Build.yml
@@ -44,20 +44,25 @@ jobs:
           targetPlatform: ${{ matrix.targetPlatform }}
           projectPath:    ${{ matrix.root-project-path }}
           unityVersion:   ${{ matrix.unity-editor-version }}
-          allowDirtyBuild: true          
+          allowDirtyBuild: true
+            
+      - name: Zip Build Output
+        run: |
+          cd build/${{ matrix.targetPlatform }}
+          zip -r ../../${{ matrix.buildName }}.zip .        
+                                   
+      # Google Driveへアップロード
+      - name: Upload to Google Drive
+        uses: Jumbo810/Upload_Github_Artifacts_TO_GDrive@v2.3.1
+        with:
+          target: ${{ matrix.buildName }}.zip
+          credentials: ${{ secrets.GDRIVE_CREDENTIALS }}
+          parent_folder_id: ${{ secrets.GDRIVE_FOLDER_ID }}
+          name: ${{ matrix.buildName }}
           
       # Output
       - name: Output Build Artifact
         uses: actions/upload-artifact@v4
         with:
-          name:       ${{ matrix.buildName }}
-          path: build/${{ matrix.targetPlatform }}
-      
-      # Google Driveへアップロード
-      - name: Upload to Google Drive
-        uses: Jumbo810/Upload_Github_Artifacts_TO_GDrive@v2.3.1
-        with:
-          target: build/${{ matrix.targetPlatform }}/${{ matrix.buildName }}.zip
-          credentials: ${{ secrets.GDRIVE_CREDENTIALS }}
-          parent_folder_id: ${{ secrets.GDRIVE_FOLDER_ID }}
           name: ${{ matrix.buildName }}
+          path: build/${{ matrix.targetPlatform }}    
