--- a/MicroMacro/Assets/Scripts/LevelEditor/Editor/LevelEditor.asmdef
+++ b/MicroMacro/Assets/Scripts/LevelEditor/Editor/LevelEditor.asmdef
@@ -2,18 +2,20 @@
     "name": "LevelEditor",
     "rootNamespace": "",
     "references": [
-        "GUID:1826c0224c0d048b88112c79bbb0cd85",
-        "GUID:2cfd637d8bffa4f3ebad425f3bdd33a2",
-        "GUID:03ca3ee4acaf74592bc6d299ca86aa27",
-        "GUID:9caa7e155cb0648da84dca829b17620f",
         "GUID:75469ad4d38634e559750d17036d5f7c",
-        "GUID:9b495325488b1194d9169ffa0592a7b1"
+        "GUID:9b495325488b1194d9169ffa0592a7b1",
+        "GUID:15fc0a57446b3144c949da3e2b9737a9",
+        "GUID:3eae0364be2026648bf74846acb8a731",
+        "GUID:df380645f10b7bc4b97d4f5eb6303d95",
+        "GUID:d8b63aba1907145bea998dd612889d6b",
+        "GUID:2665a8d13d1b3f18800f46e256720795",
+        "GUID:a6345d35ca295564cb2b3d5d1cd7e468"
     ],
     "includePlatforms": [
         "Editor"
     ],
     "excludePlatforms": [],
-    "allowUnsafeCode": false,
+    "allowUnsafeCode": true,
     "overrideReferences": false,
     "precompiledReferences": [],
     "autoReferenced": false,
