--- a/MicroMacro/Packages/manifest.json
+++ b/MicroMacro/Packages/manifest.json
@@ -9,6 +9,7 @@
     "com.unity.inputsystem": "1.14.0",
     "com.unity.memoryprofiler": "1.1.6",
     "com.unity.multiplayer.center": "1.0.0",
+    "com.unity.probuilder": "6.0.5",
     "com.unity.render-pipelines.universal": "17.1.0",
     "com.unity.test-framework": "1.5.1",
     "com.unity.timeline": "1.8.7",
